--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Take 2 at profile, using bootstrap, even if bootstrap is terrible.",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
